--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
+
+<!DOCTYPE html>
 <html>
-   <head>
-       <title>Chap2:Assignment 1:Html-me-something</title>
-   </head>
-   <body>
-       <header>
-<h1>Trip to Las Vegas and Grand Canyons</h1>
+<head>
+    <h1>Trip to Las Vegas and Grand Caneyons</h1>
+    <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
 <p>It was a long awaited trip. I was so exited,when one day my husband informed
    me about upcoming Vegas Trip. We were going to start on a 10th March, it's a
    15th Anniversary Gift. My head is crowded with too many things. Only eight
@@ -72,7 +73,7 @@
    			<p>The Grand Canyon Skywalk is a horseshoe-shaped cantilever bridge with a glass walkway in Arizona near the
               Colorado River on the edge of a side canyon in the Grand Canyon West area of the main canyon. </p>
             <figure>
-                <img src= "https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcS_26YiONWpqnicyQH08aSzAfMmMKgf5isxR-9sWTgB6yppdOqT" alt="Antelope Canyon"/>
+                <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/SkywalkFromOutsideLedge.jpg/280px-SkywalkFromOutsideLedge.jpg" alt="Antelope Canyon"/>
                 <br><figcaption>Antelope Canyon</figcaption>
             </figure>
         </section>
