--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <h1>Trip to Las Vegas and Grand Caneyons</h1>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <h1>Trip to Las Vegas and Grand Caneyons</h1>
 </head>
 <body>
-<p>It was a long awaited trip. I was so exited,when one day my husband informed
+<p><span class="bold">It was a long awaited trip.</span> I was so exited,when one day my husband informed
    me about upcoming Vegas Trip. We were going to start on a 10th March, it's a
    15th Anniversary Gift. My head is crowded with too many things. Only eight
    days left were left when i come to know about this trip.So I started listing
@@ -70,10 +70,12 @@
         <section>
    			<a name="Antelope Canyon"></a>
    			<h2>Antelope Canyon</h2>
-   			<p>The Grand Canyon Skywalk is a horseshoe-shaped cantilever bridge with a glass walkway in Arizona near the
-              Colorado River on the edge of a side canyon in the Grand Canyon West area of the main canyon. </p>
+   			<p>Antelope Canyon is a slot canyon in the American Southwest. It is located on Navajo land east of Page.
+             Formed over hundreds of years of water running through sandstone, Antelope Canyon is both a sacred site for
+             the Navajo and a favorite destination for tourists. Antelope Canyon is the most-photographed slot canyon in
+             the world </p>
             <figure>
-                <img src= "https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/SkywalkFromOutsideLedge.jpg/280px-SkywalkFromOutsideLedge.jpg" alt="Antelope Canyon"/>
+                <img src= "https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcS_26YiONWpqnicyQH08aSzAfMmMKgf5isxR-9sWTgB6yppdOqT" alt="Antelope Canyon"/>
                 <br><figcaption>Antelope Canyon</figcaption>
             </figure>
         </section>
